# openai-struct

./: Cargo.toml  README.md
src/: add_pub.py  lib.rs  rm_pub_use.py
src/models/: add_upload_part_request.rs  admin_api_key.rs  admin_api_key_owner.rs  annotation.rs  api_key_list.rs  approximate_location.rs  assistant_object.rs  assistant_object_tool_resources.rs  assistant_object_tool_resources_code_interpreter.rs  assistant_object_tool_resources_file_search.rs  assistant_stream_event.rs  assistant_supported_models.rs  assistant_tools_code.rs  assistant_tools_file_search.rs  assistant_tools_file_search_file_search.rs  assistant_tools_file_search_type_only.rs  assistant_tools_function.rs  assistants_api_response_format_option.rs  assistants_api_tool_choice_option.rs  assistants_named_tool_choice.rs  assistants_named_tool_choice_function.rs  audio_response_format.rs  audit_log.rs  audit_log_actor.rs  audit_log_actor_api_key.rs  audit_log_actor_service_account.rs  audit_log_actor_session.rs  audit_log_actor_user.rs  audit_log_api_key_created.rs  audit_log_api_key_created_data.rs  audit_log_api_key_deleted.rs  audit_log_api_key_updated.rs  audit_log_api_key_updated_changes_requested.rs  audit_log_certificate_created.rs  audit_log_certificate_deleted.rs  audit_log_certificates_activated.rs  audit_log_certificates_activated_certificates.rs  audit_log_checkpoint_permission_created.rs  audit_log_checkpoint_permission_created_data.rs  audit_log_checkpoint_permission_deleted.rs  (+632 more)
