[package]
name = "openai-struct"
version = "0.0.4"
edition = "2024"
authors = ["Leo Cheng <chengkelfan@qq.com>"]
description = "利用openai的openapi生成的rust结构体"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lfan-ke/openai-api.git"
keywords = ["codegen", "openai", "openapi"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["default"] }
serde_derive = { version = "1.0.219" }
